# Utilities_for_programming

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  weather.py
Docker_tutorial/: docker_tutorial.md
Git_learn/: Basics_of_git.md  commands_definitions.md
Poetry/: poetry_tutorial.md
Postman/: postman_tutorial.md
Regex/: regex_basics.md  regex_practice.md
pip/: pip_tutorial.md
virtual environments/: virtual_env_basics.md
